<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".SubmitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_back"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@android:color/white" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="44dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/gads_logo" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/project_submission"
        android:textColor="#ffae45"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/gradient_line" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="60dp"
        android:paddingEnd="10dp" >

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/txtLastName"
            app:layout_constraintEnd_toStartOf="@+id/txtLastName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:background="@drawable/bg_edit_text"/>

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtFirstName"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            android:background="@drawable/bg_edit_text"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
            android:autofillHints=""
            android:padding="10dp"
            android:background="@drawable/bg_edit_text"/>

        <EditText
            android:id="@+id/txtProjectUrl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textUri"
            android:hint="@string/project_on_github_link"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            tools:layout_editor_absoluteX="0dp"
            android:importantForAutofill="no"
            android:background="@drawable/bg_edit_text"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gradient_btn"
            android:minWidth="150dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProjectUrl" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>